# Hello-World-Python

./: Dockerfile  Jenkinsfile  helloworld.py  pyproject.toml
