[tool.poetry]
name = "helloworldpython"
version = "0.1.0"
description = ""
authors = ["aakashkag <aakashkaginfo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
